@@ -92,7 +92,7 @@ f6 ()
 static void
 testFuncPtr (void)
 {
-#if !((defined __SDCC_stm8) && defined (__SDCC_MODEL_LARGE)) // Assembler not suitable for 24-bit function pointers
+#if !((defined __SDCC_stm8) && defined (__SDCC_MODEL_LARGE)) // STM8 large model has sizeof(void *) != size of function pointers.
   f1 ();
   ASSERT (ret == 4);
 #endif
